# fintech

./: .gitignore  Cargo.toml
analyzer/: analyzer.py  config.py  crawler.py  database.py
gofund/: Cargo.toml
gofund/src/: main.rs
gofund/src/ui/: mod.rs
gofund_srv/: Cargo.toml  Rocket.toml
gofund_srv/src/: config.rs  database.rs  main.rs
gofund_srv/src/analyzer/: mod.rs
